wordpress/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: wordpress
spec:
  rules:
    - host: wordpress.nuc
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
